Closed
Bug 983101
Opened 11 years ago
Closed 11 years ago
unused variable 'kNsPerSec' in TimeStamp_darwin.cpp
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: gfritzsche, Assigned: gfritzsche)
Details
Attachments
(1 file)
|
969 bytes,
patch
|
froydnj
:
review+
|
Details | Diff | Splinter Review |
Apparently triggered by the Xcode update i received today:
xpcom/ds/TimeStamp_darwin.cpp:34:23: error: unused variable 'kNsPerSec' [-Werror,-Wunused-const-variable]
| Assignee | ||
Comment 1•11 years ago
|
||
This is really just unused.
Assignee: nobody → georg.fritzsche
Status: NEW → ASSIGNED
Attachment #8390441 -
Flags: review?(nfroyd)
Updated•11 years ago
|
Attachment #8390441 -
Flags: review?(nfroyd) → review+
| Assignee | ||
Comment 2•11 years ago
|
||
Comment 3•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in
before you can comment on or make changes to this bug.
Description
•