Bug 983101 - unused variable 'kNsPerSec' in TimeStamp_darwin.cpp, r=froydnj